# hyperoptic-py

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .release-please-config.json  CHANGELOG.md  CONTRIBUTING.md  README.md  TESTING.md  dump_all.py  example.py  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: lint.yml  publish.yml  release.yml  test.yml
hyperoptic/: __init__.py  auth.py  client.py  exceptions.py  models.py
tests/: __init__.py  conftest.py  test_auth.py  test_client.py  test_models.py
