[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hyperoptic"
version = "0.0.0"
description = "Unofficial Python client for the Hyperoptic customer portal API"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Kieran Roper"}]
keywords = ["hyperoptic", "api", "client", "broadband", "keycloak", "oidc"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=4.0",
    "pre-commit>=3.0",
]

[project.urls]
Homepage = "https://github.com/kroperuk/hyperoptic-py"
Repository = "https://github.com/kroperuk/hyperoptic-py"
Issues = "https://github.com/kroperuk/hyperoptic-py/issues"
Changelog = "https://github.com/kroperuk/hyperoptic-py/releases"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["hyperoptic"]

[dependency-groups]
dev = [
    "mypy (>=1.19.1,<2.0.0)",
    "pre-commit (>=4.5.1,<5.0.0)"
]
